simuladorFirewall/parser/ParSimFirewall.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from ParSimFirewall.y
-----------------------------------------------------------------------------

state 21 contains 1 reduce/reduce conflicts.
state 23 contains 1 reduce/reduce conflicts.
state 69 contains 1 shift/reduce conflicts.
state 92 contains 6 shift/reduce conflicts.
state 93 contains 6 shift/reduce conflicts.
state 94 contains 1 shift/reduce conflicts.
state 140 contains 1 shift/reduce conflicts.
state 146 contains 9 reduce/reduce conflicts.
state 155 contains 9 reduce/reduce conflicts.
state 157 contains 1 reduce/reduce conflicts.
state 176 contains 10 reduce/reduce conflicts.
state 184 contains 9 reduce/reduce conflicts.

rule 93 is unused
rule 99 is unused
rule 111 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pFunction -> Function                       (1)
	%start_pConnection -> Connection                   (2)
	%start_pRule -> Rule                               (3)
	%start_pInter -> Inter                             (4)
	%start_pPackage -> Package                         (5)
	%start_pListFunction -> ListFunction               (6)
	%start_pListConnection -> ListConnection           (7)
	%start_pListRule -> ListRule                       (8)
	%start_pListInter -> ListInter                     (9)
	%start_pListPackage -> ListPackage                 (10)
	%start_pListTab -> ListTab                         (11)
	%start_pListCom -> ListCom                         (12)
	%start_pListMat -> ListMat                         (13)
	%start_pTab -> Tab                                 (14)
	%start_pCom -> Com                                 (15)
	%start_pCha -> Cha                                 (16)
	%start_pMat -> Mat                                 (17)
	%start_pListProtocolo -> ListProtocolo             (18)
	%start_pProtocolo -> Protocolo                     (19)
	%start_pIp -> Ip                                   (20)
	%start_pListPop -> ListPop                         (21)
	%start_pListState -> ListState                     (22)
	%start_pListTarget -> ListTarget                   (23)
	%start_pPop -> Pop                                 (24)
	%start_pState -> State                             (25)
	%start_pTarget -> Target                           (26)
	%start_pListIntEstTCP -> ListIntEstTCP             (27)
	%start_pIntEstTCP -> IntEstTCP                     (28)
	Integer -> L_integ                                 (29)
	String -> L_quoted                                 (30)
	Program -> ListFunction                            (31)
	Function -> 'INIT_RULES' ListRule 'END_RULES'      (32)
	Function -> 'INIT_HOST' ListInter 'END_HOST'       (33)
	Function -> 'INIT_PACKAGES' ListPackage 'END_PACKAGES'   (34)
	Function -> 'INIT_CONNECTIONS' ListConnection 'END_CONNECTIONS'   (35)
	Connection -> 'ip' Ip 'puerto' Integer 'ip' Ip 'puerto' Integer 'state' State ';'   (36)
	Rule -> Tab Com Mat Target ';'                     (37)
	Inter -> 'interfaz' String 'ip' Ip 'mac' String ';'   (38)
	Package -> 'TCP' 'state' IntEstTCP 'src' Ip 'src-mac' String 'dst' Ip 'spot' Integer 'dport' Integer 'ttl' Integer 'Use' Integer 'interfaz' String ';'   (39)
	Package -> 'UDP' 'src' Ip 'src-mac' String 'dst' Ip 'spot' Integer 'dport' Integer 'Use' Integer 'interfaz' String ';'   (40)
	Package -> 'ICMP' 'src' Ip 'src-mac' String 'dst' Ip 'stype' Integer 'scode' Integer 'sid' Integer 'dtype' Integer 'dcode' Integer 'did' Integer 'Use' Integer 'interfaz' String ';'   (41)
	ListFunction ->                                    (42)
	ListFunction -> ListFunction Function              (43)
	ListConnection ->                                  (44)
	ListConnection -> ListConnection Connection        (45)
	ListRule ->                                        (46)
	ListRule -> ListRule Rule                          (47)
	ListInter ->                                       (48)
	ListInter -> ListInter Inter                       (49)
	ListPackage ->                                     (50)
	ListPackage -> ListPackage Package                 (51)
	ListTab ->                                         (52)
	ListTab -> ListTab Tab                             (53)
	ListCom ->                                         (54)
	ListCom -> ListCom Com                             (55)
	ListMat ->                                         (56)
	ListMat -> ListMat Mat                             (57)
	Tab -> '-t' 'nat'                                  (58)
	Tab -> '-t' 'mangle'                               (59)
	Tab -> '-t' 'filter'                               (60)
	Tab ->                                             (61)
	Com -> '-A' Cha                                    (62)
	Com -> '-D' Cha                                    (63)
	Com -> '-R' Cha Integer                            (64)
	Com -> '-I' Cha Integer                            (65)
	Com -> '-F' Cha                                    (66)
	Com -> '-P' Cha Target                             (67)
	Com ->                                             (68)
	Cha -> 'INPUT'                                     (69)
	Cha -> 'OUTPUT'                                    (70)
	Cha -> 'FORDWARD'                                  (71)
	Cha -> 'PREROUTING'                                (72)
	Cha -> 'POSTROUTING'                               (73)
	Mat -> '-p' ListProtocolo ListPop                  (74)
	Mat -> '-p' '!' ListProtocolo ListPop              (75)
	Mat -> '-s' Ip                                     (76)
	Mat -> '-d' Ip                                     (77)
	Mat -> '-i' String                                 (78)
	Mat -> '-o' String                                 (79)
	Mat -> '-m' '--state' State                        (80)
	Mat -> '-m' 'mac' '--mac-sourse' String            (81)
	Mat -> '-m' 'mac' '--mac-sourse' '!' String        (82)
	Mat ->                                             (83)
	ListProtocolo ->                                   (84)
	ListProtocolo -> Protocolo                         (85)
	ListProtocolo -> Protocolo ',' ListProtocolo       (86)
	Protocolo -> 'udp'                                 (87)
	Protocolo -> 'tcp'                                 (88)
	Protocolo -> 'icmp'                                (89)
	Protocolo -> 'all'                                 (90)
	Ip -> Integer '.' Integer '.' Integer '.' Integer '/' Integer   (91)
	Ip -> Integer '.' Integer '.' Integer '.' Integer   (92)
	ListPop ->                                         (93)
	ListPop -> Pop                                     (94)
	ListPop -> Pop ',' ListPop                         (95)
	ListState ->                                       (96)
	ListState -> State                                 (97)
	ListState -> State ',' ListState                   (98)
	ListTarget ->                                      (99)
	ListTarget -> Target                               (100)
	ListTarget -> Target ',' ListTarget                (101)
	Pop -> '--dport' Integer                           (102)
	Pop -> '--dport' '!' Integer                       (103)
	Pop -> '--sport' Integer                           (104)
	Pop -> '--sport' '!' Integer                       (105)
	Pop -> '--dport' Integer ':' Integer               (106)
	Pop -> '--dport' '!' Integer ':' Integer           (107)
	Pop -> '--sport' Integer ':' Integer               (108)
	Pop -> '--sport' '!' Integer ':' Integer           (109)
	Pop -> '--tcp-flags' IntEstTCP                     (110)
	Pop -> '--tcp-flags' '!' IntEstTCP                 (111)
	Pop -> '--tcp-flags' '!' IntEstTCP                 (112)
	Pop -> '--icmp-type' Integer                       (113)
	Pop -> '--icmp-type' '!' Integer                   (114)
	Pop ->                                             (115)
	State -> 'NEW'                                     (116)
	State -> 'INVALID'                                 (117)
	State -> 'ESTABLISHED'                             (118)
	State -> 'RELATED'                                 (119)
	Target -> '-j' 'ACCEPT'                            (120)
	Target -> '-j' 'DROP'                              (121)
	Target -> '-j' 'REGECT'                            (122)
	Target -> '-j' 'RETURN'                            (123)
	Target ->                                          (124)
	ListIntEstTCP ->                                   (125)
	ListIntEstTCP -> ListIntEstTCP IntEstTCP           (126)
	IntEstTCP -> 'NONE'                                (127)
	IntEstTCP -> 'ESTABLISHED'                         (128)
	IntEstTCP -> 'SYN_SENT'                            (129)
	IntEstTCP -> 'SYN_RECV'                            (130)
	IntEstTCP -> 'FIN_WAIT'                            (131)
	IntEstTCP -> 'TIME_WAIT'                           (132)
	IntEstTCP -> 'CLOSE'                               (133)
	IntEstTCP -> 'CLOSE_WAIT'                          (134)
	IntEstTCP -> 'LAST_ACK'                            (135)
	IntEstTCP -> 'LISTEN'                              (136)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	','            { PT _ (TS _ 2) }
	'--dport'      { PT _ (TS _ 3) }
	'--icmp-type'  { PT _ (TS _ 4) }
	'--mac-sourse' { PT _ (TS _ 5) }
	'--sport'      { PT _ (TS _ 6) }
	'--state'      { PT _ (TS _ 7) }
	'--tcp-flags'  { PT _ (TS _ 8) }
	'-A'           { PT _ (TS _ 9) }
	'-D'           { PT _ (TS _ 10) }
	'-F'           { PT _ (TS _ 11) }
	'-I'           { PT _ (TS _ 12) }
	'-P'           { PT _ (TS _ 13) }
	'-R'           { PT _ (TS _ 14) }
	'-d'           { PT _ (TS _ 15) }
	'-i'           { PT _ (TS _ 16) }
	'-j'           { PT _ (TS _ 17) }
	'-m'           { PT _ (TS _ 18) }
	'-o'           { PT _ (TS _ 19) }
	'-p'           { PT _ (TS _ 20) }
	'-s'           { PT _ (TS _ 21) }
	'-t'           { PT _ (TS _ 22) }
	'.'            { PT _ (TS _ 23) }
	'/'            { PT _ (TS _ 24) }
	':'            { PT _ (TS _ 25) }
	';'            { PT _ (TS _ 26) }
	'ACCEPT'       { PT _ (TS _ 27) }
	'CLOSE'        { PT _ (TS _ 28) }
	'CLOSE_WAIT'   { PT _ (TS _ 29) }
	'DROP'         { PT _ (TS _ 30) }
	'END_CONNECTIONS'{ PT _ (TS _ 31) }
	'END_HOST'     { PT _ (TS _ 32) }
	'END_PACKAGES' { PT _ (TS _ 33) }
	'END_RULES'    { PT _ (TS _ 34) }
	'ESTABLISHED'  { PT _ (TS _ 35) }
	'FIN_WAIT'     { PT _ (TS _ 36) }
	'FORDWARD'     { PT _ (TS _ 37) }
	'ICMP'         { PT _ (TS _ 38) }
	'INIT_CONNECTIONS'{ PT _ (TS _ 39) }
	'INIT_HOST'    { PT _ (TS _ 40) }
	'INIT_PACKAGES'{ PT _ (TS _ 41) }
	'INIT_RULES'   { PT _ (TS _ 42) }
	'INPUT'        { PT _ (TS _ 43) }
	'INVALID'      { PT _ (TS _ 44) }
	'LAST_ACK'     { PT _ (TS _ 45) }
	'LISTEN'       { PT _ (TS _ 46) }
	'NEW'          { PT _ (TS _ 47) }
	'NONE'         { PT _ (TS _ 48) }
	'OUTPUT'       { PT _ (TS _ 49) }
	'POSTROUTING'  { PT _ (TS _ 50) }
	'PREROUTING'   { PT _ (TS _ 51) }
	'REGECT'       { PT _ (TS _ 52) }
	'RELATED'      { PT _ (TS _ 53) }
	'RETURN'       { PT _ (TS _ 54) }
	'SYN_RECV'     { PT _ (TS _ 55) }
	'SYN_SENT'     { PT _ (TS _ 56) }
	'TCP'          { PT _ (TS _ 57) }
	'TIME_WAIT'    { PT _ (TS _ 58) }
	'UDP'          { PT _ (TS _ 59) }
	'Use'          { PT _ (TS _ 60) }
	'all'          { PT _ (TS _ 61) }
	'dcode'        { PT _ (TS _ 62) }
	'did'          { PT _ (TS _ 63) }
	'dport'        { PT _ (TS _ 64) }
	'dst'          { PT _ (TS _ 65) }
	'dtype'        { PT _ (TS _ 66) }
	'filter'       { PT _ (TS _ 67) }
	'icmp'         { PT _ (TS _ 68) }
	'interfaz'     { PT _ (TS _ 69) }
	'ip'           { PT _ (TS _ 70) }
	'mac'          { PT _ (TS _ 71) }
	'mangle'       { PT _ (TS _ 72) }
	'nat'          { PT _ (TS _ 73) }
	'puerto'       { PT _ (TS _ 74) }
	'scode'        { PT _ (TS _ 75) }
	'sid'          { PT _ (TS _ 76) }
	'spot'         { PT _ (TS _ 77) }
	'src'          { PT _ (TS _ 78) }
	'src-mac'      { PT _ (TS _ 79) }
	'state'        { PT _ (TS _ 80) }
	'stype'        { PT _ (TS _ 81) }
	'tcp'          { PT _ (TS _ 82) }
	'ttl'          { PT _ (TS _ 83) }
	'udp'          { PT _ (TS _ 84) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pFunction rule  1
	%start_pConnection rule  2
	%start_pRule    rule  3
	%start_pInter   rule  4
	%start_pPackage rule  5
	%start_pListFunction rule  6
	%start_pListConnection rule  7
	%start_pListRule rule  8
	%start_pListInter rule  9
	%start_pListPackage rule  10
	%start_pListTab rule  11
	%start_pListCom rule  12
	%start_pListMat rule  13
	%start_pTab     rule  14
	%start_pCom     rule  15
	%start_pCha     rule  16
	%start_pMat     rule  17
	%start_pListProtocolo rule  18
	%start_pProtocolo rule  19
	%start_pIp      rule  20
	%start_pListPop rule  21
	%start_pListState rule  22
	%start_pListTarget rule  23
	%start_pPop     rule  24
	%start_pState   rule  25
	%start_pTarget  rule  26
	%start_pListIntEstTCP rule  27
	%start_pIntEstTCP rule  28
	Integer         rule  29
	String          rule  30
	Program         rule  31
	Function        rules 32, 33, 34, 35
	Connection      rule  36
	Rule            rule  37
	Inter           rule  38
	Package         rules 39, 40, 41
	ListFunction    rules 42, 43
	ListConnection  rules 44, 45
	ListRule        rules 46, 47
	ListInter       rules 48, 49
	ListPackage     rules 50, 51
	ListTab         rules 52, 53
	ListCom         rules 54, 55
	ListMat         rules 56, 57
	Tab             rules 58, 59, 60, 61
	Com             rules 62, 63, 64, 65, 66, 67, 68
	Cha             rules 69, 70, 71, 72, 73
	Mat             rules 74, 75, 76, 77, 78, 79, 80, 81, 82, 83
	ListProtocolo   rules 84, 85, 86
	Protocolo       rules 87, 88, 89, 90
	Ip              rules 91, 92
	ListPop         rules 93, 94, 95
	ListState       rules 96, 97, 98
	ListTarget      rules 99, 100, 101
	Pop             rules 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115
	State           rules 116, 117, 118, 119
	Target          rules 120, 121, 122, 123, 124
	ListIntEstTCP   rules 125, 126
	IntEstTCP       rules 127, 128, 129, 130, 131, 132, 133, 134, 135, 136

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'INIT_CONNECTIONS'reduce using rule 42
	'INIT_HOST'    reduce using rule 42
	'INIT_PACKAGES'reduce using rule 42
	'INIT_RULES'   reduce using rule 42
	%eof           reduce using rule 42

	Program        goto state 115
	ListFunction   goto state 116

State 1


	'INIT_CONNECTIONS'shift, and enter state 111
	'INIT_HOST'    shift, and enter state 112
	'INIT_PACKAGES'shift, and enter state 113
	'INIT_RULES'   shift, and enter state 114

	Function       goto state 110

State 2


	'ip'           shift, and enter state 109

	Connection     goto state 108

State 3


	'-A'           reduce using rule 61
	'-D'           reduce using rule 61
	'-F'           reduce using rule 61
	'-I'           reduce using rule 61
	'-P'           reduce using rule 61
	'-R'           reduce using rule 61
	'-d'           reduce using rule 61
	'-i'           reduce using rule 61
	'-j'           reduce using rule 61
	'-m'           reduce using rule 61
	'-o'           reduce using rule 61
	'-p'           reduce using rule 61
	'-s'           reduce using rule 61
	'-t'           shift, and enter state 91
	';'            reduce using rule 61

	Rule           goto state 106
	Tab            goto state 107

State 4


	'interfaz'     shift, and enter state 105

	Inter          goto state 104

State 5


	'ICMP'         shift, and enter state 101
	'TCP'          shift, and enter state 102
	'UDP'          shift, and enter state 103

	Package        goto state 100

State 6


	'INIT_CONNECTIONS'reduce using rule 42
	'INIT_HOST'    reduce using rule 42
	'INIT_PACKAGES'reduce using rule 42
	'INIT_RULES'   reduce using rule 42
	%eof           reduce using rule 42

	ListFunction   goto state 99

State 7


	'ip'           reduce using rule 44
	%eof           reduce using rule 44

	ListConnection goto state 98

State 8


	'-A'           reduce using rule 46
	'-D'           reduce using rule 46
	'-F'           reduce using rule 46
	'-I'           reduce using rule 46
	'-P'           reduce using rule 46
	'-R'           reduce using rule 46
	'-d'           reduce using rule 46
	'-i'           reduce using rule 46
	'-j'           reduce using rule 46
	'-m'           reduce using rule 46
	'-o'           reduce using rule 46
	'-p'           reduce using rule 46
	'-s'           reduce using rule 46
	'-t'           reduce using rule 46
	';'            reduce using rule 46
	%eof           reduce using rule 46

	ListRule       goto state 97

State 9


	'interfaz'     reduce using rule 48
	%eof           reduce using rule 48

	ListInter      goto state 96

State 10


	'ICMP'         reduce using rule 50
	'TCP'          reduce using rule 50
	'UDP'          reduce using rule 50
	%eof           reduce using rule 50

	ListPackage    goto state 95

State 11


	'-t'           reduce using rule 52
	%eof           reduce using rule 52

	ListTab        goto state 94

State 12


	'-A'           reduce using rule 54
	'-D'           reduce using rule 54
	'-F'           reduce using rule 54
	'-I'           reduce using rule 54
	'-P'           reduce using rule 54
	'-R'           reduce using rule 54
	%eof           reduce using rule 54

	ListCom        goto state 93

State 13


	'-d'           reduce using rule 56
	'-i'           reduce using rule 56
	'-m'           reduce using rule 56
	'-o'           reduce using rule 56
	'-p'           reduce using rule 56
	'-s'           reduce using rule 56
	%eof           reduce using rule 56

	ListMat        goto state 92

State 14


	'-t'           shift, and enter state 91
	%eof           reduce using rule 61

	Tab            goto state 90

State 15


	'-A'           shift, and enter state 84
	'-D'           shift, and enter state 85
	'-F'           shift, and enter state 86
	'-I'           shift, and enter state 87
	'-P'           shift, and enter state 88
	'-R'           shift, and enter state 89
	%eof           reduce using rule 68

	Com            goto state 83

State 16


	'FORDWARD'     shift, and enter state 78
	'INPUT'        shift, and enter state 79
	'OUTPUT'       shift, and enter state 80
	'POSTROUTING'  shift, and enter state 81
	'PREROUTING'   shift, and enter state 82

	Cha            goto state 77

State 17


	'-d'           shift, and enter state 71
	'-i'           shift, and enter state 72
	'-m'           shift, and enter state 73
	'-o'           shift, and enter state 74
	'-p'           shift, and enter state 75
	'-s'           shift, and enter state 76
	%eof           reduce using rule 83

	Mat            goto state 70

State 18

